[package]
name = "gdbmtool-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rs-gdbm = { version = "0", git = "https://github.com/jgarzik/gdbm-rs.git" }
rustyline = "13"
