[package]
name = "gdbmtool-rs"
version = "0.1.0"
authors = ["Jeff Garzik"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Command line tools for GDBM databases, using gdbm-native crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
gdbm-native = { version = "0", git = "https://github.com/jgarzik/gdbm-native-rs.git" }
rustyline = "13"
shellwords = "1.1"

[[bin]]
name = "gdbmtool-rs"
path = "src/gdbmtool.rs"

[[bin]]
name = "gdbmdump-rs"
path = "src/dump.rs"

